[package]
authors = [
    'ashWhiteHat<phantomofrotten@gmail.com>',
    'KiriosK<KiriosK@yandex.ru>'
]
name = "red-jubjub"
description = 'reddsa signature implementation on jubjub'
version = "0.0.16"
edition = "2021"
license = "Apache-2.0"
homepage = 'https://github.com/KogarashiNetwork/Kogarashi/'
repository = 'https://github.com/KogarashiNetwork/Kogarashi/'
readme = 'README.md'

[dependencies]
zkstd = { version = "0.0.11", default-features = false }
jub-jub = { version = "0.0.12", default-features = false }
bls-12-381 = { version = "0.0.11", default-features = false }
blake2b_simd = { version = "1", default-features = false }
rand_core = { version="0.6.4", default-features = false }

[dev-dependencies]
hex-literal = { version = "0.3.1", default-features = false }

[features]
default = ["std"]
std = [
    "rand_core/getrandom"
]
